llvm/dev/onlymethods.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/onlymethods.llvm:5:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
